# Agentic_Ai

./: Read_me.md  chroma.py  pyproject.toml  rag.py  tool_calling.py
chroma_db/: chroma.sqlite3
chromadb_store/d7f88093-071a-49bb-89b3-93e3745bed6c/: index_metadata.pickle
